<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/pairScaleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pair_scale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/stopButton"
        app:layout_constraintStart_toStartOf="@+id/stopButton"
        app:layout_constraintTop_toBottomOf="@+id/stopButton"
        app:layout_constraintVertical_bias="0.85"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/recordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="@+id/recordButton"
        app:layout_constraintStart_toStartOf="@+id/recordButton"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/signUpWindowBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/go_to_sign_up"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/account_circle_fill0_wght400_grad0_opsz48" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/uploadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/upload_to_server_button"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_upload_fill0_wght400_grad0_opsz48"
        tools:ignore="RedundantDescriptionCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>